--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   },
   "license": "Unlicense",
   "dependencies": {
-    "@keyv/mongo": "^1.0.4",
     "chalk": "^4.1.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.2",
     "helmet": "^4.2.0",
-    "keyv": "^4.0.3",
     "moment": "^2.29.1",
-    "mongo-sanitize": "^1.1.0"
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^5.12.1"
   }
 }
