--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "Unlicense",
   "dependencies": {
     "chalk": "^4.1.0",
+    "commander": "^7.2.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
