--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -13,18 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Build
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # Sets up node
+      - name: Build
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm i -g nexe
-      - run: mkdir build/
-      - run: nexe -t linux-x64-12.16.2 cli.js -o build/server-linux
-      - run: nexe -t windows-x86-12.18.2 cli.js -o build/server-windows
-      - run: nexe -t mac-x64-12.18.2 cli.js -o build/server-mac
+      run: npm i -g nexe
+      run: mkdir build/
+      run: nexe -t linux-x64-12.16.2 cli.js -o build/server-linux
+      run: nexe -t windows-x86-12.18.2 cli.js -o build/server-windows
+      run: nexe -t mac-x64-12.18.2 cli.js -o build/server-mac
 
       - name: Compress binaries
       - uses: edgarrc/action-7z@v1.0.4
