--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       # Sets up node
       - name: Build
-      - uses: actions/setup-node@v1
+      uses: actions/setup-node@v1
         with:
           node-version: 12
       run: npm i -g nexe
@@ -27,12 +27,12 @@ jobs:
       run: nexe -t mac-x64-12.18.2 cli.js -o build/server-mac
 
       - name: Compress binaries
-      - uses: edgarrc/action-7z@v1.0.4
+      uses: edgarrc/action-7z@v1.0.4
         with:
           args: 7z a -t7z -mx=9 build.7z ./build/            
 
       - name: Publish release
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
