--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -18,11 +18,11 @@ jobs:
           with:
             node-version: 12
         uses: actions/checkout@v2
-        run: npm i -g nexe
-        run: mkdir build/
-        run: nexe -t linux-x64-12.16.2 cli.js -o build/server-linux
-        run: nexe -t windows-x86-12.18.2 cli.js -o build/server-windows
-        run: nexe -t mac-x64-12.18.2 cli.js -o build/server-mac
+        - run: npm i -g nexe
+        - run: mkdir build/
+        - run: nexe -t linux-x64-12.16.2 cli.js -o build/server-linux
+        - run: nexe -t windows-x86-12.18.2 cli.js -o build/server-windows
+        - run: nexe -t mac-x64-12.18.2 cli.js -o build/server-mac
 
       - name: Compress binaries
         uses: edgarrc/action-7z@v1.0.4
