--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 14
       - run: npm i -g nexe
+      - run: npm i
       - run: mkdir build/
       - run: nexe -t linux-x64-12.16.2 cli.js -o build/server-linux
       - run: nexe -t windows-x86-12.18.2 cli.js -o build/server-windows
