--- a/.github/workflows/gulp.yml
+++ b/.github/workflows/gulp.yml
@@ -4,6 +4,8 @@ name: Run gulp tasks
 on:
   push:
     branches: ["master"]
+    paths:
+    - 'src/**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
