--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Sample env file for yeeturl
+# Example env file for yeeturl
 
 # The MongoDB URL you want to use to store data.
 # Format: mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
