--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # serialize workflow runs (wait for gulp.yml to finish)
+      - uses: softprops/turnstyle@v1
+        with:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
       - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v1
