--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -27,12 +27,15 @@ jobs:
       - run: npm i
       - run: mkdir build/
       - run: nexe -t linux-x64-12.16.2 cli.js --resource "./dist/*" -o build/server-linux
-      - run: nexe -t windows-x86-12.18.2 cli.js --resource "./dist/*" -o build/server-windows
+      - run: nexe -t windows-x86-12.18.2 cli.js --resource "./dist/*" -o build/server-windows.exe
       - run: nexe -t mac-x64-12.18.2 cli.js --resource "./dist/*" -o build/server-mac
 
       - uses: edgarrc/action-7z@v1.0.4
         with:
-          args: 7z a -t7z -mx=9 build.7z ./build/            
+          args: 7z a -t7z -mx=9 build-all.7z ./build/            
+      - run: zip -9 server-windows.zip build/server-windows.exe
+      - run: zip -9 server-mac.zip build/server-mac
+      - run: tar -cJf server-linux.tar.xz build/server-linux
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -41,4 +44,7 @@ jobs:
           prerelease: false
           title: "yeeturl-server"
           files: |
-            build.7z
+            build-all.7z
+            server-windows.zip
+            server-mac.zip
+            server-linux.tar.xz
