--- a/.github/workflows/gulp.yml
+++ b/.github/workflows/gulp.yml
@@ -6,6 +6,7 @@ on:
     branches: ["master"]
     paths:
     - 'src/**'
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,11 +22,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package.json') }}-${{ hashFiles('**/package-lock.json') }}
-      - run: npm i
+      - run: npm ci
       - run: gulp
             
       - name: Commit and Push
